# irc

./: Cargo.toml  README.md
irc-proto/: Cargo.toml
irc-proto/src/: caps.rs  colors.rs  command.rs  error.rs  irc.rs  lib.rs  line.rs  message.rs  mode.rs  prefix.rs  response.rs
src/: error.rs  lib.rs
src/client/: conn.rs  mock.rs  mod.rs  prelude.rs  transport.rs
src/client/data/: client_config.json  client_config.toml  client_config.yaml  config.rs  user.rs
