[package]
name = "irc-proto"
version = "0.15.0"
description = "The IRC protocol distilled."
authors = ["Aaron Weiss <aweiss@hey.com>"]
edition = "2021"
rust-version = "1.61.0"
license = "MPL-2.0"
keywords = ["irc", "protocol", "tokio"]
categories = ["network-programming"]
documentation = "https://docs.rs/irc-proto/"
repository = "https://github.com/aatxe/irc"

[badges]
travis-ci = { repository = "aatxe/irc" }

[features]
default = ["bytes", "tokio", "tokio-util"]

[dependencies]
encoding = "0.2.33"
thiserror = "1.0.38"

bytes = { version = "1.4.0", optional = true }
tokio = { version = "1.25.0", optional = true }
tokio-util = { version = "0.7.6", features = ["codec"], optional = true }
